.devops/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: slmorrell/python-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
